# image-labelling-server

./: .gitignore  README.md  __init__.py  __main__.py  config.py  export.py  export_utils.py  ingest_audio.py  ingest_folder.py  ingest_jsonl.py  ingest_ranking.py  media_utils.py  monitor.py  prepare.py  pyproject.toml  ranking_store.py  server.py
smart_label/: __init__.py  __main__.py  cli.py  config.py  ingest_audio.py  ingest_folder.py  ingest_jsonl.py  prepare.py  server.py
smart_label/static/: app.js  index.html  style.css
static/: app.js  index.html  style.css
tests/: __init__.py  frontend_static.test.js  test_cli.py  test_config.py  test_ingest_audio.py  test_ingest_jsonl.py  test_ingest_ranking.py  test_ranking_server.py  test_ranking_store.py  test_server.py
